# TSW01-REPRODUCIBLE-OPEN-SOURCE

./: .gitignore  Bell.py  LICENSE  README.md  ZHZ.py  dispersion.py  main.py  optical_signal.py  pyproject.toml  waveforms.py
.github/workflows/: autograding.yml
src/opticaldisp/: dispersion.py  optical_signals.py  waveforms.py
tests/: test_waveforms.py
